<resources>
    <string name="app_name">imd0033</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_user">This user is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_seguir_cc">SeguirCCActivity</string>
    <string name="t_titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="autor">Autor</string>
    <string name="id">Id:</string>
    <string name="c_digo">Código:</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="usu_rio">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="cpf">CPF:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="co_requisitos">Co-requisitos:</string>
    <string name="equivalentes">Equivalentes:</string>
    <string name="departamento">Departamento:</string>
    <string name="pr_requisitos">Pré-requisitos:</string>
    <string name="obrigat_ria">Obrigatória</string>
    <string name="carga_hor_ria">Carga Horária:</string>
    <string name="semestre_oferta">Semestre Oferta:</string>
    <string name="cadastre_se">Cadastre-se</string>
</resources>
